<resources>
    <string name="app_name">ChatOps</string>
    <string name="message">message</string>
    <string name="message_at_me">\@my_message</string>
    <string name="operations">application</string>
    <string name="collect">collection</string>
    <string name="mine">mine</string>
    <string name="mail">email</string>
    <string name="phone">phone</string>
    <string name="qq">QQ</string>
    <string name="wechat">wechat</string>
    <string name="cur_version">current version:</string>
    <string name="webside">web side</string>
    <string name="about">about</string>
    <string name="logout">quit</string>
    <string name="chatops">ChatOps</string>
    <string name="first_text1"></string>
    <string name="first_text2">For normal access to ChatOps, please set up the server:</string>
    <string name="first_text3">server address,such as http://10.1.1.1</string>
    <string name="into_login">goto login</string>

    <string name="parse_error">Parse error</string>
    <string name="connect_error">connect error</string>
    <string name="confilm_error">Verify code error</string>
    <string name="certificate_validation_failed">Certificate validation failed</string>
    <string name="cannot_connect_to_server">Cannot connect to server</string>
    <string name="server_error">Server error</string>
    <string name="account_or_psd_error">ERROR Incorrect username or password</string>
    <string name="complete">complete</string>

    <string name="mailnum">mailbox,phone number or account</string>
    <string name="password">password</string>
    <string name="confilmword">Verification Code</string>
    <string name="login">login</string>
    <string name="loginerrOnline">Account or password error, please re-enter</string>
    <string name="configservice">server config</string>
    <string name="setservice">server address:</string>
    <string name="back">back</string>
    <string name="close">close</string>
    <string name="save">save</string>
    <string name="serviceiperr">server address error</string>
    <string name="emali_error">The mailbox format is incorrect</string>
    <string name="hint">Are you sure you want to logout？</string>
    <string name="cancel">cancel</string>
    <string name="sure">sure</string>
    <string name="net_error">Network connection exception</string>
    <string name="picture">Photo Gallery</string>
    <string name="photograph">Photograph</string>
    <string name="server_cannot_be_null">The server address cannot be empty</string>
    <string name="login_ing">log in</string>
    <string name="login_success">Login successful</string>
    <string name="name_pwd_not_null">User name password cannot be empty</string>
    <string name="confilm_pwd_not_null">The verification code cannot be null</string>
    <string name="upload_ing">Uploading</string>
    <string name="action_settings">Settings</string>
    <string name="select_mode">Select Mode</string>
    <string name="mode_single">Single-Choice</string>
    <string name="mode_multi">Multi-Choice</string>
    <string name="max_select_amount">Max Selected Amount</string>
    <string name="hint_default_amount">default amount is 9</string>
    <string name="enable_camera">Enable Camera</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="go_select">Select</string>
    <string name="folder_all">All Images</string>
    <string name="preview">Preview</string>
    <string name="msg_no_camera">No system camera found</string>
    <string name="msg_amount_limit">You can choose only 9 photos at most</string>
    <string name="action_done">send</string>
    <string name="photo_unit">Shot</string>
    <string name="tip_take_photo">Take photo</string>
    <string name="loading">loading</string>

    <string name="mis_folder_all">All Images</string>
    <string name="mis_preview">Preview</string>
    <string name="mis_msg_no_camera">No system camera found</string>
    <string name="mis_msg_amount_limit">Select images amount is limit</string>
    <string name="mis_action_done">Done</string>
    <string name="mis_photo_unit">Shot</string>
    <string name="mis_tip_take_photo">Take photo</string>
    <string name="mis_error_image_not_exist">Image error</string>
    <string name="mis_error_no_permission">Has no permission</string>
    <string name="mis_permission_dialog_title">Permission Deny</string>
    <string name="mis_permission_dialog_ok">OK</string>
    <string name="mis_permission_dialog_cancel">CANCEL</string>
    <string name="mis_permission_rationale">Storage read permission is needed to pick files.</string>
    <string name="mis_permission_audio">Storage audio permission is needed to voice chat.</string>
    <string name="mis_permission_audio_write">Storage write permission is needed to voice chat.</string>
    <string name="mis_permission_rationale_write_storage">Storage write permission is needed to save the image.</string>

    <string name="account">account</string>
    <string name="nickname">nickname</string>
    <string name="contacts">contacts</string>
    <string name="label">Label</string>
    <string name="label_edit">Label Edit</string>
    <string name="add">add</string>
    <string name="add_label">add label</string>
    <string name="please_add_label">Please add a card to the board first</string>
    <string name="manage_label">manage label</string>
    <string name="all_label_added">All label have been added</string>
    <string name="more">more</string>
    <string name="leak_memory">not enough storage</string>
    <string name="laber_no_data">Temporarily without data</string>
    <string name="printSize">print size</string>
    <string name="printCount">print count</string>
    <string name="print">print</string>

	<string name="scanner_view_tip_text"></string>
    <string name="scan">Scan</string>
    <string name="scan_result">scan result</string>
    <string name="mm">millimeter</string>
    <string name="print_setup">print setup</string>

    <string name="max_num">maximum is 100</string>
    <string name="min_num">minimum is 1</string>
    <string name="num_cannot_under_zero">The number of printing cannot be 0</string>
    <string name="network_anomaly">network anomaly</string>
    <string name="network_settings">Please check the network settings</string>
    <string name="reset">reset</string>
    <string name="update_lat_lon">latitude and longitude</string>
</resources>
