<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tit_relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="44dp"
    android:background="#4988E8"
    android:gravity="center_vertical">
    <TextView
        android:id="@+id/text_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="17sp"
        android:textColor="#FFFFFFFF"
        android:layout_marginLeft="15dp"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/tit_text"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:textColor="#fff"
        android:layout_centerHorizontal="true"
        android:textSize="17sp"
        android:gravity="center_vertical"
        android:text="@string/label_edit"
        />
    <TextView
        android:id="@+id/text_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complete"
        android:textSize="17sp"
        android:textColor="#FFFFFFFF"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:layout_centerVertical="true"/>
</RelativeLayout>