<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:fitsSystemWindows="true">
    <include layout="@layout/layout_title_showtext"
        android:visibility="gone"/>
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="54dp">
        <ImageView
            android:id="@+id/imgtit"
            android:layout_width="66.6dp"
            android:layout_height="66.6dp"
            android:src="@drawable/chatopslogo"
            android:layout_centerVertical="true"
            android:layout_marginLeft="98dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@id/imgtit"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16.4dp">
            <TextView
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chatops"
                android:textSize="22sp"
                android:textColor="#4988e8"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/text_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_text1"
                android:layout_centerVertical="true"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                android:textColor="#4988e8"/>
        </LinearLayout>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="90dp"
        android:text="@string/first_text2"
        android:textSize="14sp"
        android:textColor="#969696"
        android:layout_marginLeft="23dp"/>
    <com.uyun.hummer.view.ClearEditText
        android:id="@+id/service"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/first_text3"
        android:textColorHint="#b3b3b3"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="23dp"
        android:background="@drawable/login_edit"
        android:layout_marginTop="12dp"
        android:textSize="15sp"
        android:paddingLeft="16dp"/>
    <TextView
        android:id="@+id/err_hint"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:textColor="#fe3824"
        android:textSize="13sp"
        android:layout_marginLeft="23dp"
        android:layout_gravity="center_horizontal"
        android:visibility="invisible"/>
    <Button
        android:id="@+id/into_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="23dp"
        android:text="@string/into_login"
        android:textSize="17sp"
        android:background="@drawable/login_btn"
        android:textColor="#fff"/>
</LinearLayout>
