<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">
    <include layout="@layout/layout_title"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/first_text2"
        android:textSize="14sp"
        android:textColor="#969696"
        android:layout_marginLeft="23dp"/>
    <com.uyun.hummer.view.ClearEditText
        android:id="@+id/service"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/first_text3"
        android:textColorHint="#b3b3b3"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="23dp"
        android:background="@drawable/server_input"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:paddingLeft="16dp"
        />
    <TextView
        android:id="@+id/err_hint"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:textColor="#fe3824"
        android:textSize="13sp"
        android:layout_marginLeft="23dp"
        android:visibility="invisible"/>
    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="23dp"
        android:text="@string/save"
        android:textSize="17sp"
        android:background="@drawable/login_btn_blue"
        android:textColor="#fff"/>
</LinearLayout>
