<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/tit_relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="#4988E8"
        android:gravity="center_vertical">
        <LinearLayout
            android:id="@+id/back_ll"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginLeft="15dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/backbutton"/>
            <TextView
                android:id="@+id/back_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message"
                android:textColor="#fff"
                android:textSize="17sp"
                android:layout_marginLeft="7dp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tit_text"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:textColor="#fff"
            android:layout_centerHorizontal="true"
            android:textSize="17sp"
            android:gravity="center_vertical"
            android:text="@string/scan"/>
    </RelativeLayout>

    <SurfaceView
        android:id="@+id/surface"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tit_relativeLayout"
        android:layout_centerInParent="true" />

    <com.uyun.hummer.zxing.view.ScannerView
        android:id="@+id/scan_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tit_relativeLayout"
        android:layout_centerInParent="true" />

    <LinearLayout
        android:id="@+id/networkError"
        android:layout_below="@id/tit_relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:orientation="vertical"
        android:alpha="0.4">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="#fff"
            android:text="@string/network_anomaly"
            android:layout_marginTop="200dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="#fff"
            android:text="@string/network_settings"/>
    </LinearLayout>
</RelativeLayout>
