<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="#00000000">

    <LinearLayout
        android:id="@+id/pop_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">



        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_edit"
            android:orientation="vertical">
        <Button
            android:id="@+id/openPhoto"
            android:layout_width="fill_parent"
            android:layout_height="57dp"
            android:text="@string/picture"
            android:textColor="#0076ff"
            android:textSize="20sp"
            android:background="#00000000"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="0.3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#4d4d4d" />
        <Button
            android:id="@+id/openCamera"
            android:layout_width="fill_parent"
            android:layout_height="57dp"
            android:text="@string/photograph"
            android:textColor="#0076ff"
            android:textSize="20sp"
            android:background="#00000000"/>
    </LinearLayout>
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="fill_parent"
            android:layout_height="57dp"
            android:layout_marginBottom="9dip"
            android:layout_marginTop="8dip"

            android:text="@string/cancel"
            android:textColor="#0076ff"
            android:textSize="20sp"
            android:background="@drawable/login_edit"/>
    </LinearLayout>

</RelativeLayout>