<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F7F7">
    <include layout="@layout/layout_title_showtext"
        android:id="@+id/title"/>
    <RelativeLayout
        android:id="@+id/layout_print"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#fff"
        android:layout_below="@+id/title">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/printSize"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="30"
            android:layout_centerInParent="true"
            android:textSize="16sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/next"
            android:layout_marginRight="10dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#ccc"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/layout_print"
        android:background="#fff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/printCount"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:textSize="16sp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerInParent="true">
        <ImageView
            android:id="@+id/printMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/minus"/>
        <EditText
            android:id="@+id/edit_count"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:text="1"
            android:gravity="center"
            android:textSize="16sp"
            android:background="#00000000"
            android:inputType="number"/>
        <ImageView
            android:id="@+id/printAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/add"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#ccc"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/print_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/manage_label_n"
        android:layout_alignParentBottom="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/print"
            android:layout_centerInParent="true"
            android:textColor="@color/manage_label_p"/>
    </RelativeLayout>
    <ImageView
        android:id="@+id/image_qrcode"
        android:layout_width="270dp"
        android:layout_height="270dp"
        android:layout_centerInParent="true"/>
</RelativeLayout>
